[package]
name = "selecta"
version = "0.0.2-nopenopenope"
authors = ["Carol (Nichols || Goulding) <carol.nichols@gmail.com>"]
description = "This is not Selecta in Rust. Please see https://github.com/felipesere/icepick"
repository = "https://github.com/carols10cents/selecta"
readme = "README.md"
license = "MIT"
